package popcornMsg;
message  PopcornMsg {
   required string node = 1;
   required string node_role = 2;
   required string node_version = 3;
   required uint32 level = 4;
   required string message = 5;
   required string module = 6;
   required string funcName = 7;
   required string line = 8;
   required string pid = 9;
}
